--- a/index.html
+++ b/index.html
@@ -355,32 +355,6 @@
       transform: translateY(-1px);
     }
 
-    /* ✅ Plan highlight colors */
-    .tapActive.starterGlow{
-      box-shadow:
-        0 0 0 1px rgba(59,130,246,.22),
-        0 0 0 6px rgba(59,130,246,.14),
-        0 30px 130px rgba(0,0,0,.55);
-    }
-    .tapActive.popularGlow{
-      box-shadow:
-        0 0 0 1px rgba(34,197,94,.22),
-        0 0 0 6px rgba(34,197,94,.14),
-        0 30px 130px rgba(0,0,0,.55);
-    }
-    .tapActive.proGlow{
-      box-shadow:
-        0 0 0 1px rgba(168,85,247,.22),
-        0 0 0 6px rgba(168,85,247,.14),
-        0 30px 130px rgba(0,0,0,.55);
-    }
-    .tapActive.eliteGlow{
-      box-shadow:
-        0 0 0 1px rgba(251,191,36,.22),
-        0 0 0 6px rgba(251,191,36,.14),
-        0 30px 130px rgba(0,0,0,.55);
-    }
-
     /* ✅ Plan badge */
     .planBadge{
       display:inline-flex;
@@ -402,29 +376,27 @@
     .badgePro{ background: rgba(168,85,247,.16); border-color: rgba(168,85,247,.26); }
     .badgeElite{ background: rgba(251,191,36,.14); border-color: rgba(251,191,36,.28); }
 
-    /* ✅ FIXED: Plan shield logos (transparent, NO BOX) */
+    /* ✅ FIXED: Plan shield logos (transparent, no small box) */
     .planLogoWrap{
       display:flex;
       align-items:center;
-      justify-content:center;
-      margin: 0 0 12px;
-      width:100%;
+      justify-content:flex-start;
+      margin: 0 0 10px;
+      pointer-events:none;
+      user-select:none;
     }
     .planLogo{
-      width:110px;
+      width:98px;
       height:auto;
       object-fit:contain;
       filter:
-        drop-shadow(0 20px 60px rgba(0,0,0,.65))
+        drop-shadow(0 20px 55px rgba(0,0,0,.55))
         drop-shadow(0 0 28px rgba(96,165,250,.22));
-      opacity:1;
-      transform: translateY(-6px);
-      pointer-events:none;
-      user-select:none;
+      opacity:0.98;
+      transform: translateY(-2px);
       background: transparent !important;
-      border: none !important;
-      border-radius: 0 !important;
-      box-shadow: none !important;
+      border:none !important;
+      border-radius:0 !important;
     }
 
     /* ✅ HERO */
@@ -627,6 +599,7 @@
       font-weight:1100;
       font-size:12px;
     }
+
     /* ✅ section title */
     .sectionTitle{
       text-align:center;
@@ -882,9 +855,8 @@
     .planCard > *{position:relative; z-index:1;}
     .planHead{
       display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:10px;
+      flex-direction:column;
+      gap:8px;
     }
     .planName{
       font-weight:1300;
@@ -903,6 +875,7 @@
       border-radius:999px;
       border:1px solid rgba(255,255,255,.12);
       background: rgba(2,6,23,.20);
+      width: fit-content;
     }
     .planPrice{
       font-size:28px;
@@ -1314,7 +1287,7 @@
       justify-content:flex-end;
     }
 
-    /* ✅ Footer (FIXED layout with logo left + copyright bottom center) */
+    /* ✅ Footer */
     footer{
       padding:34px 0 26px;
       border-top:1px solid rgba(255,255,255,.10);
@@ -1323,52 +1296,53 @@
       -webkit-backdrop-filter: blur(12px);
       position:relative;
       z-index:2;
+      overflow:hidden; /* ✅ prevents top-left shadow box issue */
     }
 
-    .footerTop{
+    /* ✅ NEW footer header row */
+    .footTop{
       display:flex;
       align-items:flex-start;
       justify-content:space-between;
       gap:18px;
       flex-wrap:wrap;
-      margin-bottom:18px;
+      margin-bottom:14px;
     }
 
+    /* ✅ Footer logo TOP LEFT */
     .footerBrand{
       display:flex;
       align-items:center;
       gap:12px;
-      min-width:220px;
+      text-decoration:none;
       user-select:none;
+      max-width: 380px;
     }
-
-    /* ✅ Footer logo 3x bigger but mobile-safe */
-    .footerLogo{
-      height:34px;
+    .footerBrand img{
+      height:32px;
       width:auto;
-      max-width:240px;
       object-fit:contain;
       filter:
-        drop-shadow(0 12px 35px rgba(0,0,0,.60))
-        drop-shadow(0 0 26px rgba(59,130,246,.22));
-      transform: scale(3);
+        drop-shadow(0 10px 30px rgba(0,0,0,.55))
+        drop-shadow(0 0 22px rgba(59,130,246,.22));
+      transform: scale(3); /* ✅ 3x */
       transform-origin:left top;
     }
 
-    .footRight{
-      text-align:right;
-      flex:1;
-      min-width:240px;
+    .footInner{
+      text-align:center;
+      font-size:12px;
+      color:rgba(234,240,255,.66);
+      line-height:1.6;
     }
-
-    .footRight .footer-links{
-      margin-top:0;
+    .footer-links{
+      margin-top:12px;
       display:flex;
       flex-wrap:wrap;
       gap:10px;
-      justify-content:flex-end;
+      justify-content:center;
     }
-    .footRight .footer-links a{
+    .footer-links a{
       color:#9cc7ff;
       font-weight:1100;
       text-decoration:none;
@@ -1378,11 +1352,11 @@
       border:1px solid rgba(255,255,255,.10);
       background: rgba(255,255,255,.04);
     }
-    .footRight .footer-links a:hover{background: rgba(255,255,255,.06);}
+    .footer-links a:hover{background: rgba(255,255,255,.06);}
 
-    /* ✅ Risk/Disclaimer */
+    /* ✅ UPDATED Footer Disclaimer / Risk Block */
     .risk{
-      margin-top:14px;
+      margin-top:12px;
       max-width:980px;
       margin-left:auto;
       margin-right:auto;
@@ -1390,19 +1364,17 @@
       font-size:11.5px;
       line-height:1.75;
       white-space:pre-line;
-      text-align:center;
     }
 
-    /* ✅ FINAL Copyright very bottom centered */
-    .footerBottom{
+    /* ✅ New hard-bottom copyright line */
+    .copyrightBottom{
       margin-top:18px;
       padding-top:14px;
       border-top:1px solid rgba(255,255,255,.08);
       text-align:center;
       font-size:12px;
-      color:rgba(234,240,255,.66);
-      font-weight:950;
-      letter-spacing:.2px;
+      font-weight:1100;
+      color:rgba(234,240,255,.70);
     }
 
     /* ✅ Responsive */
@@ -1445,40 +1417,16 @@
         transform-origin:left center;
       }
 
-      /* ✅ Plans logo tuned for mobile */
-      .planLogo{
-        width:98px;
-        transform: translateY(-5px);
+      /* ✅ Footer logo mobile-safe */
+      .footerBrand img{
+        transform: scale(2.1);
+        height:28px;
       }
 
       .coinCard{min-width: 310px; max-width:310px;}
       .planGrid{grid-template-columns: 1fr;}
       .statsGrid{grid-template-columns: 1fr;}
       .stepsGrid{grid-template-columns: 1fr;}
-
-      /* ✅ Footer becomes centered */
-      .footerTop{
-        flex-direction:column;
-        align-items:center;
-        text-align:center;
-        gap:14px;
-      }
-      .footRight{
-        text-align:center;
-        min-width:unset;
-        width:100%;
-      }
-      .footRight .footer-links{
-        justify-content:center;
-      }
-
-      /* ✅ Footer logo still 3x but safe */
-      .footerLogo{
-        height:30px;
-        max-width:210px;
-        transform: scale(2.35);
-        transform-origin:center top;
-      }
 
       /* ✅ Testimonials slider on mobile */
       .testGrid{
@@ -1508,7 +1456,7 @@
   </style>
 </head>
 
-  <body>
+<body>
 
 <canvas id="bgCanvas"></canvas>
 
@@ -1522,8 +1470,6 @@
       <div style="display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:flex-end;">
         <select id="langSelect" class="langSelect" aria-label="Translate this page">
           <option value="">Translate</option>
-
-          <!-- ✅ MASSIVE language list -->
           <option value="af">Afrikaans</option>
           <option value="sq">Albanian</option>
           <option value="am">Amharic</option>
@@ -1655,7 +1601,6 @@
 
       <div class="navCTA">
         <a class="btn btnOutline" href="login.html">Login</a>
-
         <a class="btn btnPrimary" href="signup.html">Get Started</a>
 
         <div class="menuWrap">
@@ -1680,7 +1625,7 @@
   </div>
 </header>
 
-<!-- ✅ Live ticker tape (SAFE TradingView embed) -->
+<!-- ✅ Live ticker tape -->
 <div class="tickerWrap">
   <div class="container">
     <div class="tickerInner">
@@ -1711,7 +1656,8 @@
     </div>
   </div>
 </div>
-    <!-- ✅ Hero -->
+
+<!-- ✅ Hero -->
 <section class="hero reveal touchHighlight">
   <div class="container">
     <div class="heroGrid">
@@ -1800,7 +1746,6 @@
     </div>
 
     <div class="statsGrid">
-      <!-- ✅ Clients Served increases forever (6/day = 1 per 4hrs) -->
       <div class="statBox tapHighlight">
         <div class="statNum" id="clientsServed" data-base="250000">0</div>
         <div class="statLbl">Clients Served</div>
@@ -1811,7 +1756,6 @@
         <div class="statLbl">Countries</div>
       </div>
 
-      <!-- ✅ Processed Volume increases forever -->
       <div class="statBox tapHighlight">
         <div class="statNum" id="processedVolume" data-base="12000000">0</div>
         <div class="statLbl">Processed Volume ($)</div>
@@ -1980,16 +1924,13 @@
     </div>
 
     <div class="planGrid">
-    <div class="planGrid">
 
-      <!-- ✅ SILVER -->
       <div class="planCard tapHighlight" data-plan="silver">
-        <div class="planLogoWrap">
-          <img class="planLogo" src="assets/plan-silver.jpg" alt="Silver Plan Badge"
-               onerror="this.style.display='none';" />
-        </div>
-
         <div class="planHead">
+          <div class="planLogoWrap">
+            <img class="planLogo" src="assets/plan-silver.jpg" alt="Silver Plan Logo"
+                 onerror="this.style.display='none';" />
+          </div>
           <div class="planName">
             Silver
             <span class="planBadge badgeStarter">Starter</span>
@@ -1998,7 +1939,6 @@
         </div>
 
         <div class="planPrice">$500 <small>minimum</small></div>
-
         <ul class="planList">
           <li>
             <svg viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#22c55e" stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -2013,22 +1953,19 @@
             Live market visibility
           </li>
         </ul>
-
         <div class="planBtn">
           <a class="btn btnPrimary" href="signup.html">Get Started</a>
         </div>
       </div>
 
-      <!-- ✅ GOLD (Featured) -->
       <div class="planCard planFeatured tapHighlight" data-plan="gold">
         <div class="planGlow" aria-hidden="true"></div>
 
-        <div class="planLogoWrap">
-          <img class="planLogo" src="assets/plan-gold.jpg" alt="Gold Plan Badge"
-               onerror="this.style.display='none';" />
-        </div>
-
         <div class="planHead">
+          <div class="planLogoWrap">
+            <img class="planLogo" src="assets/plan-gold.jpg" alt="Gold Plan Logo"
+                 onerror="this.style.display='none';" />
+          </div>
           <div class="planName">
             Gold
             <span class="planBadge badgePopular">Popular</span>
@@ -2037,7 +1974,6 @@
         </div>
 
         <div class="planPrice">$2,000 <small>minimum</small></div>
-
         <ul class="planList">
           <li>
             <svg viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#22c55e" stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -2052,20 +1988,17 @@
             Advanced tools suite
           </li>
         </ul>
-
         <div class="planBtn">
           <a class="btn btnPrimary" href="signup.html">Choose Gold</a>
         </div>
       </div>
 
-      <!-- ✅ DIAMOND -->
       <div class="planCard tapHighlight" data-plan="diamond">
-        <div class="planLogoWrap">
-          <img class="planLogo" src="assets/plan-diamond.jpg" alt="Diamond Plan Badge"
-               onerror="this.style.display='none';" />
-        </div>
-
         <div class="planHead">
+          <div class="planLogoWrap">
+            <img class="planLogo" src="assets/plan-diamond.jpg" alt="Diamond Plan Logo"
+                 onerror="this.style.display='none';" />
+          </div>
           <div class="planName">
             Diamond
             <span class="planBadge badgePro">Pro</span>
@@ -2074,7 +2007,6 @@
         </div>
 
         <div class="planPrice">$5,000 <small>minimum</small></div>
-
         <ul class="planList">
           <li>
             <svg viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#22c55e" stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -2089,20 +2021,17 @@
             Higher performance tracking
           </li>
         </ul>
-
         <div class="planBtn">
           <a class="btn btnPrimary" href="signup.html">Choose Diamond</a>
         </div>
       </div>
 
-      <!-- ✅ PLATINUM -->
       <div class="planCard tapHighlight" data-plan="platinum">
-        <div class="planLogoWrap">
-          <img class="planLogo" src="assets/plan-platinum.jpg" alt="Platinum Plan Badge"
-               onerror="this.style.display='none';" />
-        </div>
-
         <div class="planHead">
+          <div class="planLogoWrap">
+            <img class="planLogo" src="assets/plan-platinum.jpg" alt="Platinum Plan Logo"
+                 onerror="this.style.display='none';" />
+          </div>
           <div class="planName">
             Platinum
             <span class="planBadge badgeElite">Elite</span>
@@ -2111,7 +2040,6 @@
         </div>
 
         <div class="planPrice">$10,000 <small>minimum</small></div>
-
         <ul class="planList">
           <li>
             <svg viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#22c55e" stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -2126,7 +2054,6 @@
             Highest tier access tools
           </li>
         </ul>
-
         <div class="planBtn">
           <a class="btn btnPrimary" href="signup.html">Choose Platinum</a>
         </div>
@@ -2240,98 +2167,46 @@
     </div>
   </div>
 </section>
+
 <!-- ✅ Footer -->
 <footer class="reveal touchHighlight">
   <div class="container">
 
-    <!-- ✅ Footer top row (logo left, links right) -->
-    <div style="
-      display:flex;
-      align-items:flex-start;
-      justify-content:space-between;
-      gap:18px;
-      flex-wrap:wrap;
-      padding-bottom:18px;
-      border-bottom:1px solid rgba(255,255,255,.10);
-      margin-bottom:18px;
-    ">
-
-      <!-- ✅ Footer Veloci logo (NOT sticky) -->
-      <a href="index.html" aria-label="Veloci Global Markets"
-         style="text-decoration:none; display:flex; align-items:center;">
-        <img src="assets/vgm-logo.png" alt="Veloci Global Markets"
-             style="
-               height:34px;
-               width:auto;
-               max-width:260px;
-               object-fit:contain;
-               filter:
-                 drop-shadow(0 10px 30px rgba(0,0,0,.55))
-                 drop-shadow(0 0 22px rgba(59,130,246,.22));
-               transform: translateY(1px) scale(3);
-               transform-origin:left center;
-             "
+    <!-- ✅ Top footer row with logo on left -->
+    <div class="footTop">
+      <a class="footerBrand" href="index.html" aria-label="Veloci Global Markets footer brand">
+        <img src="assets/vgm-logo.png" alt="Veloci Global Markets Logo"
              onerror="this.style.display='none';" />
       </a>
 
-      <!-- ✅ Footer links -->
-      <div class="footer-links" style="margin-top:6px; justify-content:flex-end;">
+      <!-- spacing / keeps flex balanced -->
+      <div style="flex:1;"></div>
+    </div>
+
+    <div class="footInner">
+      © 2026 Veloci Global Markets. All rights reserved.
+
+      <div class="footer-links">
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
         <a href="risk.html">Risk Disclosure</a>
         <a href="contact.html">Contact</a>
       </div>
-    </div>
 
-    <!-- ✅ Footer body -->
-    <div class="footInner" style="text-align:left;">
-      <div style="font-weight:1100; color:rgba(234,240,255,.72); font-size:12.5px;">
-        © 2026 Veloci Global Markets. All rights reserved.
-      </div>
-
-      <!-- ✅ Updated risk text -->
-      <div class="risk" style="margin-top:12px;">
+      <div class="risk" style="margin-top:14px;">
         This website may use automated translations for your convenience. However, the English version is the definitive version and will prevail in the event of any discrepancy.<br/><br/>
         Trade responsibly: Trading CFDs is risky and may lead to permanent capital loss. Make sure you understand the risks before trading.<br/><br/>
         Veloci Global Markets is a registered trademark utilised under an approved licensing agreement. All rights reserved.<br/><br/>
         Veloci Global Markets does not offer Contracts for Difference to residents of certain jurisdictions including the Yemen and Iran
       </div>
 
-      <!-- ✅ Requested copyright line: very bottom, centered -->
-      <div style="
-        margin-top:22px;
-        padding-top:14px;
-        border-top:1px solid rgba(255,255,255,.10);
-        text-align:center;
-        color:rgba(234,240,255,.62);
-        font-size:12px;
-        font-weight:1100;
-      ">
+      <!-- ✅ EXACT bottom text requested -->
+      <div class="copyrightBottom">
         (c) Veloci Global Market. All right reserved
       </div>
     </div>
+
   </div>
-
-  <!-- ✅ Footer mobile safety rules -->
-  <style>
-    @media(max-width:560px){
-      footer .container > div:first-child{
-        flex-direction:column !important;
-        align-items:flex-start !important;
-      }
-
-      /* ✅ Footer logo must stay large but fit on mobile */
-      footer img[alt="Veloci Global Markets"]{
-        transform: translateY(1px) scale(2.25) !important;
-        height:28px !important;
-        max-width:220px !important;
-      }
-
-      .footer-links{
-        justify-content:flex-start !important;
-      }
-    }
-  </style>
 </footer>
 
 <script>
@@ -2490,8 +2365,6 @@ function setGoogleTranslateLang(lang){
 
 /* =========================================================
    ✅ Stats Counter Animation
-   - Clients Served: increases forever (6/day = 1 every 4 hours)
-   - Processed Volume: increases forever with logic
 ========================================================= */
 (function initCounters(){
   const nums = document.querySelectorAll(".statNum");
@@ -2567,7 +2440,7 @@ function setGoogleTranslateLang(lang){
         const stepKey = "vgm_processed_volume_step";
         let stepVal = Number(localStorage.getItem(stepKey));
         if(!stepVal){
-          stepVal = Math.floor(18000 + Math.random()*47000); // 18k to 65k per 4hrs
+          stepVal = Math.floor(18000 + Math.random()*47000);
           localStorage.setItem(stepKey, String(stepVal));
         }
 
@@ -2828,7 +2701,7 @@ function starIcons(n){
 })();
 
 /* =========================================================
-   ✅ Google Translate loader
+   ✅ Google Translate loader script
 ========================================================= */
 (function loadGoogleTranslate(){
   const s = document.createElement("script");
