--- a/index.html
+++ b/index.html
@@ -2179,12 +2179,16 @@
              onerror="this.style.display='none';" />
       </a>
 
-      <!-- spacing / keeps flex balanced -->
+      <div class="risk" style="margin-top:14px;">
+        This website may use automated translations for your convenience. However, the English version is the definitive version and will prevail in the event of any discrepancy.<br/><br/>
+        Trade responsibly: Trading CFDs is risky and may lead to permanent capital loss. Make sure you understand the risks before trading.<br/><br/>
+        Veloci Global Markets is a registered trademark utilised under an approved licensing agreement. All rights reserved.<br/><br/>
+        Veloci Global Markets does not offer Contracts for Difference to residents of certain jurisdictions including Yemen and Iran
+      </div>
+
+        <!-- spacing / keeps flex balanced -->
       <div style="flex:1;"></div>
     </div>
-
-    <div class="footInner">
-      © 2026 Veloci Global Markets. All rights reserved.
 
       <div class="footer-links">
         <a href="privacy.html">Privacy</a>
@@ -2192,17 +2196,10 @@
         <a href="risk.html">Risk Disclosure</a>
         <a href="contact.html">Contact</a>
       </div>
-
-      <div class="risk" style="margin-top:14px;">
-        This website may use automated translations for your convenience. However, the English version is the definitive version and will prevail in the event of any discrepancy.<br/><br/>
-        Trade responsibly: Trading CFDs is risky and may lead to permanent capital loss. Make sure you understand the risks before trading.<br/><br/>
-        Veloci Global Markets is a registered trademark utilised under an approved licensing agreement. All rights reserved.<br/><br/>
-        Veloci Global Markets does not offer Contracts for Difference to residents of certain jurisdictions including the Yemen and Iran
-      </div>
-
+    
       <!-- ✅ EXACT bottom text requested -->
       <div class="copyrightBottom">
-        (c) Veloci Global Market. All right reserved
+      © 2026 Veloci Global Markets. All rights reserved.
       </div>
     </div>
 
