--- a/index.html
+++ b/index.html
@@ -355,6 +355,32 @@
       transform: translateY(-1px);
     }
 
+    /* ✅ Plan highlight colors */
+    .tapActive.starterGlow{
+      box-shadow:
+        0 0 0 1px rgba(59,130,246,.22),
+        0 0 0 6px rgba(59,130,246,.14),
+        0 30px 130px rgba(0,0,0,.55);
+    }
+    .tapActive.popularGlow{
+      box-shadow:
+        0 0 0 1px rgba(34,197,94,.22),
+        0 0 0 6px rgba(34,197,94,.14),
+        0 30px 130px rgba(0,0,0,.55);
+    }
+    .tapActive.proGlow{
+      box-shadow:
+        0 0 0 1px rgba(168,85,247,.22),
+        0 0 0 6px rgba(168,85,247,.14),
+        0 30px 130px rgba(0,0,0,.55);
+    }
+    .tapActive.eliteGlow{
+      box-shadow:
+        0 0 0 1px rgba(251,191,36,.22),
+        0 0 0 6px rgba(251,191,36,.14),
+        0 30px 130px rgba(0,0,0,.55);
+    }
+
     /* ✅ Plan badge */
     .planBadge{
       display:inline-flex;
@@ -376,27 +402,24 @@
     .badgePro{ background: rgba(168,85,247,.16); border-color: rgba(168,85,247,.26); }
     .badgeElite{ background: rgba(251,191,36,.14); border-color: rgba(251,191,36,.28); }
 
-    /* ✅ FIXED: Plan shield logos (transparent, no small box) */
+    /* ✅ NEW: Plan shield logos */
     .planLogoWrap{
       display:flex;
       align-items:center;
-      justify-content:flex-start;
+      justify-content:center;
       margin: 0 0 10px;
-      pointer-events:none;
-      user-select:none;
     }
     .planLogo{
-      width:98px;
+      width:92px;
       height:auto;
       object-fit:contain;
       filter:
         drop-shadow(0 20px 55px rgba(0,0,0,.55))
-        drop-shadow(0 0 28px rgba(96,165,250,.22));
+        drop-shadow(0 0 24px rgba(96,165,250,.20));
       opacity:0.98;
       transform: translateY(-2px);
-      background: transparent !important;
-      border:none !important;
-      border-radius:0 !important;
+      pointer-events:none;
+      user-select:none;
     }
 
     /* ✅ HERO */
@@ -841,7 +864,7 @@
       display:flex;
       flex-direction:column;
       gap:12px;
-      min-height: 340px;
+      min-height: 320px;
     }
     .planCard::before{
       content:"";
@@ -855,8 +878,9 @@
     .planCard > *{position:relative; z-index:1;}
     .planHead{
       display:flex;
-      flex-direction:column;
-      gap:8px;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
     }
     .planName{
       font-weight:1300;
@@ -875,7 +899,6 @@
       border-radius:999px;
       border:1px solid rgba(255,255,255,.12);
       background: rgba(2,6,23,.20);
-      width: fit-content;
     }
     .planPrice{
       font-size:28px;
@@ -1289,46 +1312,14 @@
 
     /* ✅ Footer */
     footer{
-      padding:34px 0 26px;
+      padding:26px 0 34px;
       border-top:1px solid rgba(255,255,255,.10);
       background: rgba(2,6,23,.26);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
       position:relative;
       z-index:2;
-      overflow:hidden; /* ✅ prevents top-left shadow box issue */
     }
-
-    /* ✅ NEW footer header row */
-    .footTop{
-      display:flex;
-      align-items:flex-start;
-      justify-content:space-between;
-      gap:18px;
-      flex-wrap:wrap;
-      margin-bottom:14px;
-    }
-
-    /* ✅ Footer logo TOP LEFT */
-    .footerBrand{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      text-decoration:none;
-      user-select:none;
-      max-width: 380px;
-    }
-    .footerBrand img{
-      height:32px;
-      width:auto;
-      object-fit:contain;
-      filter:
-        drop-shadow(0 10px 30px rgba(0,0,0,.55))
-        drop-shadow(0 0 22px rgba(59,130,246,.22));
-      transform: scale(3); /* ✅ 3x */
-      transform-origin:left top;
-    }
-
     .footInner{
       text-align:center;
       font-size:12px;
@@ -1364,17 +1355,6 @@
       font-size:11.5px;
       line-height:1.75;
       white-space:pre-line;
-    }
-
-    /* ✅ New hard-bottom copyright line */
-    .copyrightBottom{
-      margin-top:18px;
-      padding-top:14px;
-      border-top:1px solid rgba(255,255,255,.08);
-      text-align:center;
-      font-size:12px;
-      font-weight:1100;
-      color:rgba(234,240,255,.70);
     }
 
     /* ✅ Responsive */
@@ -1415,12 +1395,6 @@
         max-width:200px;
         transform: translateY(1px) scale(2.15);
         transform-origin:left center;
-      }
-
-      /* ✅ Footer logo mobile-safe */
-      .footerBrand img{
-        transform: scale(2.1);
-        height:28px;
       }
 
       .coinCard{min-width: 310px; max-width:310px;}
@@ -1601,6 +1575,7 @@
 
       <div class="navCTA">
         <a class="btn btnOutline" href="login.html">Login</a>
+
         <a class="btn btnPrimary" href="signup.html">Get Started</a>
 
         <div class="menuWrap">
@@ -1625,7 +1600,7 @@
   </div>
 </header>
 
-<!-- ✅ Live ticker tape -->
+<!-- ✅ Live ticker tape (SAFE TradingView embed) -->
 <div class="tickerWrap">
   <div class="container">
     <div class="tickerInner">
@@ -1927,17 +1902,13 @@
 
       <div class="planCard tapHighlight" data-plan="silver">
         <div class="planHead">
-          <div class="planLogoWrap">
-            <img class="planLogo" src="assets/plan-silver.jpg" alt="Silver Plan Logo"
-                 onerror="this.style.display='none';" />
-          </div>
           <div class="planName">
+            <img src="assets/plan-silver.jpg" alt="Silver Plan Badge" style="width:32px;height:32px;border-radius:12px;object-fit:cover;border:1px solid rgba(255,255,255,.14);box-shadow:0 12px 34px rgba(0,0,0,.35);" />
             Silver
             <span class="planBadge badgeStarter">Starter</span>
           </div>
           <div class="planTag">Basic</div>
         </div>
-
         <div class="planPrice">$500 <small>minimum</small></div>
         <ul class="planList">
           <li>
@@ -1960,19 +1931,14 @@
 
       <div class="planCard planFeatured tapHighlight" data-plan="gold">
         <div class="planGlow" aria-hidden="true"></div>
-
         <div class="planHead">
-          <div class="planLogoWrap">
-            <img class="planLogo" src="assets/plan-gold.jpg" alt="Gold Plan Logo"
-                 onerror="this.style.display='none';" />
-          </div>
           <div class="planName">
+            <img src="assets/plan-gold.jpg" alt="Gold Plan Badge" style="width:32px;height:32px;border-radius:12px;object-fit:cover;border:1px solid rgba(255,255,255,.14);box-shadow:0 12px 34px rgba(0,0,0,.35);" />
             Gold
             <span class="planBadge badgePopular">Popular</span>
           </div>
           <div class="planTag">Top</div>
         </div>
-
         <div class="planPrice">$2,000 <small>minimum</small></div>
         <ul class="planList">
           <li>
@@ -1995,17 +1961,13 @@
 
       <div class="planCard tapHighlight" data-plan="diamond">
         <div class="planHead">
-          <div class="planLogoWrap">
-            <img class="planLogo" src="assets/plan-diamond.jpg" alt="Diamond Plan Logo"
-                 onerror="this.style.display='none';" />
-          </div>
           <div class="planName">
+            <img src="assets/plan-diamond.jpg" alt="Diamond Plan Badge" style="width:32px;height:32px;border-radius:12px;object-fit:cover;border:1px solid rgba(255,255,255,.14);box-shadow:0 12px 34px rgba(0,0,0,.35);" />
             Diamond
             <span class="planBadge badgePro">Pro</span>
           </div>
           <div class="planTag">Advanced</div>
         </div>
-
         <div class="planPrice">$5,000 <small>minimum</small></div>
         <ul class="planList">
           <li>
@@ -2028,17 +1990,13 @@
 
       <div class="planCard tapHighlight" data-plan="platinum">
         <div class="planHead">
-          <div class="planLogoWrap">
-            <img class="planLogo" src="assets/plan-platinum.jpg" alt="Platinum Plan Logo"
-                 onerror="this.style.display='none';" />
-          </div>
           <div class="planName">
+            <img src="assets/plan-platinum.jpg" alt="Platinum Plan Badge" style="width:32px;height:32px;border-radius:12px;object-fit:cover;border:1px solid rgba(255,255,255,.14);box-shadow:0 12px 34px rgba(0,0,0,.35);" />
             Platinum
             <span class="planBadge badgeElite">Elite</span>
           </div>
           <div class="planTag">VIP</div>
         </div>
-
         <div class="planPrice">$10,000 <small>minimum</small></div>
         <ul class="planList">
           <li>
@@ -2171,38 +2129,30 @@
 <!-- ✅ Footer -->
 <footer class="reveal touchHighlight">
   <div class="container">
+    <div class="footInner">
 
-    <!-- ✅ Top footer row with logo on left -->
-    <div class="footTop">
-      <a class="footerBrand" href="index.html" aria-label="Veloci Global Markets footer brand">
-        <img src="assets/vgm-logo.png" alt="Veloci Global Markets Logo"
-             onerror="this.style.display='none';" />
-      </a>
-
-        <div class="risk" style="margin-top:14px;">
+      <!-- ✅ UPDATED FOOTER TEXT (EXACTLY WHAT YOU SENT) -->
+      <div class="risk" style="margin-top:14px;">
         This website may use automated translations for your convenience. However, the English version is the definitive version and will prevail in the event of any discrepancy.<br/><br/>
         Trade responsibly: Trading CFDs is risky and may lead to permanent capital loss. Make sure you understand the risks before trading.<br/><br/>
         Veloci Global Markets is a registered trademark utilised under an approved licensing agreement. All rights reserved.<br/><br/>
         Veloci Global Markets does not offer Contracts for Difference to residents of certain jurisdictions including Yemen and Iran
       </div>
 
-        <!-- spacing / keeps flex balanced -->
-      <div style="flex:1;"></div>
-    </div>
-
-      <div class="footer-links">
+      <!-- ✅ MOVED LINKS BELOW THE FINAL SENTENCE -->
+      <div class="footer-links" style="margin-top:16px;">
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
         <a href="risk.html">Risk Disclosure</a>
         <a href="contact.html">Contact</a>
       </div>
-    
-      <!-- ✅ EXACT bottom text requested -->
-      <div class="copyrightBottom">
-      © 2026 Veloci Global Markets. All rights reserved.
-      </div>
-    </div>
 
+      <!-- ✅ MOVED COPYRIGHT TO BOTTOM + CENTERED -->
+      <div style="margin-top:18px; text-align:center;">
+        © 2026 Veloci Global Markets. All rights reserved.
+      </div>
+
+    </div>
   </div>
 </footer>
 
@@ -2606,7 +2556,7 @@ async function loadMarkets(){
     }
 
     for(const item of data){
-      const selector = '.coinCard[data-coin="' + item.id + '"]';
+      var selector = '.coinCard[data-coin="' + item.id + '"]';
       const allCards = auto.querySelectorAll(selector);
       allCards.forEach(card => applyTo(card, item));
     }
@@ -2620,7 +2570,7 @@ loadMarkets();
 setInterval(loadMarkets, 45000);
 
 /* =========================================================
-   ✅ Testimonials
+   ✅ Testimonials (auto slide slow on mobile, swipeable)
 ========================================================= */
 async function getTestimonials(){
   return [
