--- a/index.html
+++ b/index.html
@@ -55,99 +55,45 @@
     }
 
     /* =========================================================
-       ✅ AstroFX-style Blob Background (VISIBLE FIX)
-       IMPORTANT:
-       - Canvas elements don't reliably support ::before/::after.
-       - So we use #bgCanvas as base and #blobLayer as pseudo-element glow layer.
+       ✅ Particle Starfield Background (RESTORED)
+       Matches reference screenshot background
     ========================================================= */
 
-    #bgCanvas{
-      position:fixed;
-      inset:0;
-      z-index:0;
-      pointer-events:none;
-      width:100vw;
-      height:100vh;
-      display:block;
+    #particleBg{
+      position: fixed;
+      inset: 0;
+      z-index: 0;
+      pointer-events: none;
+      overflow: hidden;
 
-      /* Base deep background */
       background:
-        radial-gradient(980px 720px at 18% 18%, rgba(59,130,246,.34), transparent 62%),
-        radial-gradient(900px 680px at 86% 14%, rgba(99,102,241,.28), transparent 60%),
-        radial-gradient(820px 620px at 42% 92%, rgba(59,130,246,.18), transparent 62%),
-        radial-gradient(760px 600px at 88% 84%, rgba(168,85,247,.14), transparent 62%),
-        var(--bg);
-
-      filter: saturate(1.22) contrast(1.08);
-      opacity: 1;
-      transform: translateZ(0);
-      will-change: transform, filter;
-
-      /* Subtle blob motion */
-      animation: astroBlobMove 18s ease-in-out infinite alternate;
+        radial-gradient(circle at 30% 20%, rgba(40,90,180,.28), transparent 60%),
+        radial-gradient(circle at 80% 10%, rgba(60,120,255,.22), transparent 55%),
+        radial-gradient(circle at 50% 90%, rgba(30,70,160,.25), transparent 60%),
+        linear-gradient(180deg, #030817 0%, #050a18 100%);
     }
 
-    @keyframes astroBlobMove{
-      0%{
-        filter: saturate(1.16) contrast(1.06);
-        transform: translate3d(0,0,0) scale(1);
-      }
-      50%{
-        filter: saturate(1.28) contrast(1.10);
-        transform: translate3d(-14px, 12px, 0) scale(1.03);
-      }
-      100%{
-        filter: saturate(1.18) contrast(1.07);
-        transform: translate3d(12px, -14px, 0) scale(1.04);
-      }
-    }
-
-    /* ✅ NEW: REAL blob overlay layer (this is the missing part that makes blobs visible) */
-    #blobLayer{
-      position:fixed;
-      inset:0;
-      z-index:1;
-      pointer-events:none;
-      width:100vw;
-      height:100vh;
-      display:block;
-      isolation:isolate;
-      mix-blend-mode: screen;
-    }
-
-    #blobLayer::before{
+    #particleBg::before,
+    #particleBg::after{
       content:"";
       position:absolute;
-      inset:-170px;
-      background:
-        radial-gradient(520px 520px at 20% 30%, rgba(96,165,250,.28), transparent 62%),
-        radial-gradient(660px 660px at 78% 26%, rgba(99,102,241,.22), transparent 60%),
-        radial-gradient(600px 600px at 58% 78%, rgba(59,130,246,.18), transparent 62%),
-        radial-gradient(740px 740px at 84% 86%, rgba(168,85,247,.16), transparent 64%);
-      filter: blur(34px);
-      opacity:.95;
-      animation: astroBlobFloat 24s ease-in-out infinite alternate;
-      transform: translateZ(0);
-      will-change: transform;
-    }
-
-    @keyframes astroBlobFloat{
-      0%   { transform: translate3d(0,0,0) scale(1); }
-      50%  { transform: translate3d(22px,-14px,0) scale(1.05); }
-      100% { transform: translate3d(-18px,12px,0) scale(1.07); }
-    }
-
-    /* ✅ Optional subtle grain overlay (premium) */
-    #blobLayer::after{
-      content:"";
-      position:absolute;
-      inset:0;
+      inset:-200px;
       background-image:
-        radial-gradient(rgba(255,255,255,.038) 1px, transparent 1px);
-      background-size: 4px 4px;
-      opacity:.055;
-      mix-blend-mode: overlay;
-      pointer-events:none;
+        radial-gradient(circle, rgba(170,210,255,.95) 1px, transparent 1px);
+      background-size: 22px 22px;
+      opacity:.22;
+      animation: particleFloat 120s linear infinite;
+    }
+
+    #particleBg::after{
+      background-size: 36px 36px;
+      opacity:.14;
+      animation-duration: 200s;
+    }
+
+    @keyframes particleFloat{
+      from{ transform: translateY(0); }
+      to{ transform: translateY(-800px); }
     }
 
     /* ✅ Top bar */
@@ -1561,11 +1507,8 @@
 </head>
 <body>
 
-<!-- ✅ Base Blob Background -->
-<canvas id="bgCanvas"></canvas>
-
-<!-- ✅ NEW: Visible Blob Overlay Layer -->
-<div id="blobLayer" aria-hidden="true"></div>
+<!-- ✅ RESTORED PARTICLE BACKGROUND -->
+<div id="particleBg" aria-hidden="true"></div>
 
 <!-- ✅ Top bar -->
 <div class="topbar">
@@ -2326,11 +2269,6 @@
     logo.style.isolation = "isolate";
   }
 })();
-
-/* =========================================================
-   ✅ REMOVED SPARKLE PARTICLE BACKGROUND
-   - Now AstroFX-style blobs are pure CSS in #bgCanvas + #blobLayer
-========================================================= */
 
 /* =========================================================
    ✅ MENU BUTTON DROPDOWN
